--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Build project
         run: npm run build
+        env:
+          VITE_INSTANTDB_ID: ${{ secrets.VITE_INSTANTDB_ID }}
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
